Fix some links overflowing

--- a/static/styles/shell.css
+++ b/static/styles/shell.css
@@ -403,6 +403,7 @@ body {
 	bottom: 0;
 
 	color: var(--fp-text-color);
+	word-break: break-word;
 }
 .fp-content::after {
 	display: block;
